# opportunity-ai-squad

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY.md  PROMPTS.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml
alembic/: env.py
alembic/versions/: 734d10e8f4c9_schema_inicial.py
docker/: Dockerfile
docs/agents/: README.md
docs/architecture/: plugins.md
docs/database/: schema.md
docs/plugins/: scrapegraph_ai.md
docs/prompts/: README.md
docs/reports/: README.md
docs/research/: README.md
plugins/: registry.py
plugins/ai/anthropic/: plugin.yaml  provider.py
plugins/notifications/telegram/: notifier.py  plugin.yaml
plugins/reports/markdown/: generator.py  plugin.yaml
plugins/sources/github_trending/: connector.py  plugin.yaml
plugins/sources/hacker_news/: connector.py  plugin.yaml
plugins/sources/scrapegraph_ai/: connector.py  plugin.yaml
src/opportunity_squad/: main.py
src/opportunity_squad/agents/: __init__.py  architecture_agent.py  competitor_agent.py  discovery_agent.py  documentation_agent.py  gap_agent.py  market_agent.py  memory_agent.py  mvp_agent.py  notification_agent.py  report_agent.py  research_agent.py  review_agent.py  scout_agent.py  security_agent.py  sentiment_agent.py  strategy_agent.py  trend_agent.py
src/opportunity_squad/api/: app.py
src/opportunity_squad/core/: config.py  logging.py  (+1 more)
tests/integration/: conftest.py  test_scout_discovery_agents.py
tests/unit/: test_config.py  test_opportunity_score.py  test_registry.py  test_scrapegraph_ai_connector.py  test_source_connectors.py
(+26 files in other folders)
