[project]
name = "opportunity-ai-squad"
version = "0.1.0"
description = "Esquadrão de agentes de IA que descobre oportunidades de apps, SaaS e negócios digitais 24/7"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "anthropic>=0.39.0",
    "python-telegram-bot>=21.7",
    "apscheduler>=3.10.4",
    "structlog>=24.4.0",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "feedparser>=6.0.11",
    "scrapegraph-py>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.21",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.12",
    "respx>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opportunity_squad"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "plugins", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
# E501: line length handled by formatter, not worth failing CI over.
# B027: optional lifecycle hooks (shutdown()) are intentionally empty no-ops in our plugin interfaces.
ignore = ["E501", "B027"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
